--- a/templates/macros/nav.html
+++ b/templates/macros/nav.html
@@ -40,7 +40,22 @@
       <a class="command-overlay__link" href="{{ get_url(path='@/_index.md', lang=lang) }}">{{ trans(key="nav_home", lang=lang) }}</a>
       <a class="command-overlay__link" href="{{ get_url(path='@/vision.md', lang=lang) }}">{{ trans(key="nav_vision", lang=lang) }}</a>
       <a class="command-overlay__link" href="{{ get_url(path='@/programm.md', lang=lang) }}">{{ trans(key="nav_programm", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/manifest.md', lang=lang) }}">{{ trans(key="nav_manifest", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/kein-links-rechts.md', lang=lang) }}">{{ trans(key="nav_kein_links_rechts", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/digitale-souveraenitaet.md', lang=lang) }}">{{ trans(key="nav_digitale_souveraenitaet", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/robotik.md', lang=lang) }}">{{ trans(key="nav_robotik", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/uebergaenge.md', lang=lang) }}">{{ trans(key="nav_uebergaenge", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/life-science.md', lang=lang) }}">{{ trans(key="nav_life_science", lang=lang) }}</a>
       <a class="command-overlay__link" href="{{ get_url(path='@/grundeinkommen.md', lang=lang) }}">{{ trans(key="nav_grundeinkommen", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/stadte-wohnen.md', lang=lang) }}">{{ trans(key="nav_stadte_wohnen", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/research-innovation.md', lang=lang) }}">{{ trans(key="nav_research_innovation", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/energy-resilience.md', lang=lang) }}">{{ trans(key="nav_energy_resilience", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/offener-staat.md', lang=lang) }}">{{ trans(key="nav_offener_staat", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/neutralitaet-frieden.md', lang=lang) }}">{{ trans(key="nav_neutralitaet_frieden", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/talent-integration.md', lang=lang) }}">{{ trans(key="nav_talent_integration", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/sprache-verstaendigung.md', lang=lang) }}">{{ trans(key="nav_sprache_verstaendigung", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/menschen.md', lang=lang) }}">{{ trans(key="nav_menschen", lang=lang) }}</a>
+      <a class="command-overlay__link" href="{{ get_url(path='@/mitmachen.md', lang=lang) }}">{{ trans(key="nav_mitmachen", lang=lang) }}</a>
       <a class="command-overlay__link" href="{{ get_url(path='@/kontakt.md', lang=lang) }}">{{ trans(key="nav_kontakt", lang=lang) }}</a>
       <a class="command-overlay__link" href="{{ get_url(path='@/info.md', lang=lang) }}">{{ trans(key="nav_info", lang=lang) }}</a>
     </nav>
